--- a/packages/solid-demo-fe/src/assets/scss/root.scss
+++ b/packages/solid-demo-fe/src/assets/scss/root.scss
@@ -1,2 +1,6 @@
 @import 'normalize.css';
+
+// Components
+@import './components/Slider.scss';
 @import './components/Snackbar.scss';
+@import './components/HeroBanner.scss';
