--- a/packages/solid-demo-fe/src/assets/scss/root.scss
+++ b/packages/solid-demo-fe/src/assets/scss/root.scss
@@ -4,3 +4,4 @@
 @import './components/Slider.scss';
 @import './components/Snackbar.scss';
 @import './components/HeroBanner.scss';
+@import './components/CollectionItem.scss';
