--- a/packages/solid-demo-fe/src/assets/scss/root.scss
+++ b/packages/solid-demo-fe/src/assets/scss/root.scss
@@ -1,6 +1,7 @@
 @import 'normalize.css';
 
 // Components
+@import './layout/global.scss';
 @import './components/Slider.scss';
 @import './components/Snackbar.scss';
 @import './components/HeroBanner.scss';
