--- a/packages/solid-demo-fe/src/assets/scss/root.scss
+++ b/packages/solid-demo-fe/src/assets/scss/root.scss
@@ -5,3 +5,5 @@
 @import './components/Snackbar.scss';
 @import './components/HeroBanner.scss';
 @import './components/CollectionItem.scss';
+@import './components/Banner.scss';
+@import './components/Filter.scss';
