--- a/packages/solid-demo-fe/src/assets/scss/root.scss
+++ b/packages/solid-demo-fe/src/assets/scss/root.scss
@@ -7,3 +7,4 @@
 @import './components/CollectionItem.scss';
 @import './components/Banner.scss';
 @import './components/Filter.scss';
+@import './components/Pagination.scss';
